<resources>
    <string name="app_name">Lab1</string>
    <string name="infosys">中山大学学生信息系统</string>
    <string name="student_id">学号:</string>
    <string name="input_student_id">请输入学号</string>
    <string name="password">密码:</string>
    <string name="input_password">请输入密码</string>
    <string name="student">学生</string>
    <string name="staff">教职工</string>
    <string name="login">登录</string>
    <string name="register">注册</string>

</resources>
