<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"

    tools:context="com.example.john.myapplication.MainActivity">
    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="20dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="20dp"
        tools:layout_editor_absoluteX="0dp" />


    <TextView
        android:id="@+id/sysuinfosys"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/infosys"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <ImageView
        android:id="@+id/sysu_logo"
        android:layout_width="105dp"
        android:layout_height="117dp"
        android:src="@drawable/sysu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sysuinfosys"
        android:layout_marginTop="20dp"
        app:layout_constraintHorizontal_bias="0.503"
        tools:layout_editor_absoluteX="150dp" />

    <TextView
        android:id="@+id/ssid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/student_id"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/sysu_logo"
        android:layout_marginTop="30dp"

        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"
        />
    <EditText
        android:id="@+id/inputssid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:inputType="number"
        android:hint="@string/input_student_id"
        app:layout_constraintTop_toBottomOf="@+id/sysu_logo"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintLeft_toRightOf="@+id/ssid"
        android:layout_marginStart="25dp"
        />

    <TextView
        android:id="@+id/pwid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/inputssid"
        android:layout_marginTop="30dp"

        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="20dp"/>
    <EditText
        android:id="@+id/inputpwid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:hint="@string/input_password"
        app:layout_constraintTop_toBottomOf="@+id/inputssid"
        android:layout_marginTop="20dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="20dp"
        app:layout_constraintLeft_toRightOf="@+id/pwid"
        android:layout_marginStart="25dp" />

    <RadioGroup
        android:id="@+id/identity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputpwid"
        android:layout_marginTop="20dp"
        >
        <RadioButton
            android:id="@+id/studentw"
            android:checked="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/student"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <RadioButton

            android:id="@+id/staffw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/staff"
            android:textSize="18sp"
            app:layout_constraintLeft_toRightOf="@+id/pwid"
            android:layout_marginStart="10dp"/>
    </RadioGroup>

    <Button
        android:id="@+id/login"
        android:background="@drawable/button_shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"

        app:layout_constraintTop_toBottomOf="@+id/identity"
        android:layout_marginTop="20dp"

        app:layout_constraintRight_toLeftOf="@+id/register" />

    <Button
        android:id="@+id/register"
        android:background="@drawable/button_shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintRight_toRightOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/identity"
        android:layout_marginTop="20dp"


        app:layout_constraintLeft_toRightOf="@+id/login"
        android:layout_marginStart="10dp" />



</android.support.constraint.ConstraintLayout>
